# DMN

./: .gitignore  pyproject.toml  requirements.txt
configs/: optimal_tf.example.toml
docs/: optimal_tf_architecture.md  optimal_tf_specifications.md  optimal_tf_strategies.md  optimal_tf_usage.md
notebooks/: README.md  colab_backtest.ipynb  colab_by_ticker.ipynb  colab_live.ipynb  colab_optimize.ipynb  notebook_logging.py
skills/monthly-data-refresh/: SKILL.md
skills/monthly-data-refresh/agents/: openai.yaml
skills/monthly-data-refresh/references/: monthly-checklist.md
skills/monthly-data-refresh/scripts/: update_data_files.py
src/: dmn_by_ticker.py  dmn_live.py  dmn_optimize.py  dmn_test.py  forecasting_with_lstm.py  market_tickers.py
src/dmn/: __init__.py  backtest.py  config.py  config_io.py  data.py  features.py  metrics.py  optimize.py  portfolio.py  runner.py  universe.py
src/dmn/cli/: __init__.py  by_ticker.py  common.py  config.example.toml  live.py  main.py  optimize_cli.py
src/dmn/strategies/: __init__.py  artifacts.py  baseline.py  dmn_lstm.py  engine.py  live.py  ml.py  (+5 more)
src/market_tickers_data/: __init__.py  components.py  filters.py  universes.py
src/optimal_tf/: __init__.py  allocation.py  backtest.py  config.py  config_io.py  data.py  demo.py  evaluation.py  features.py  metrics.py  portfolios.py  rebalance.py  reporting.py  validation.py
tests/optimal_tf/: test_allocation_and_cli.py  test_backtest.py  test_covariance.py  test_evaluation.py  test_metrics_and_validation.py  test_portfolios.py  test_rebalance.py  test_strategy_panels.py
(+11 files in other folders)
